fix avatar breaking layout on small screens for author card & page

--- a/frontend/src/styles/author-card.module.scss
+++ b/frontend/src/styles/author-card.module.scss
@@ -44,8 +44,11 @@
 .avatar {
   display: block;
   position: relative;
-  width: rem(140);
-  height: rem(140);
+  width: 100%;
+  height: 100%;
+  max-width: rem(140);
+  max-height: rem(140);
+  aspect-ratio: 1 / 1;
   overflow: hidden;
   border-radius: 50%;
   transition: box-shadow var(--trans-timing) var(--trans-easing);
