--- a/frontend/src/styles/author-page.module.scss
+++ b/frontend/src/styles/author-page.module.scss
@@ -100,8 +100,11 @@ section.intro {
 
 .avatar {
   display: block;
-  width: rem(200);
-  height: rem(200);
+  width: 100%;
+  height: 100%;
+  max-width: rem(200);
+  max-height: rem(200);
+  aspect-ratio: 1 / 1;
   overflow: hidden;
   border-radius: 50%;
   margin-bottom: rem(20);
